// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getCloseIconJssStyle() should return correct JssStyle 1`] = `
{
  "marginLeft": "1rem",
}
`;

exports[`getComponentCss() should return correct css for state: error, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #290A0A !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(28%) sepia(34%) saturate(3133%) hue-rotate(333deg) brightness(95%) contrast(100%);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: error, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #FCE8E9 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(25%) sepia(62%) saturate(2003%) hue-rotate(335deg) brightness(100%) contrast(97%);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: false, hasClose: true and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: false, hasClose: true and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: true, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.action {
  grid-column-start: 1;
  grid-row-start: 2;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  }
  .action {
    grid-column-start: 3;
    grid-row-start: 1;
    margin-left: 1rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: true, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.action {
  grid-column-start: 1;
  grid-row-start: 2;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  }
  .action {
    grid-column-start: 3;
    grid-row-start: 1;
    margin-left: 1rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: true, hasClose: true and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #001A33 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.action {
  grid-column-start: 1;
  grid-row-start: 2;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  }
  .action {
    grid-column-start: 3;
    grid-row-start: 1;
    margin-left: 1rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: info, hasAction: true, hasClose: true and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #E8EEFD !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.action {
  grid-column-start: 1;
  grid-row-start: 2;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  }
  .action {
    grid-column-start: 3;
    grid-row-start: 1;
    margin-left: 1rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: undefined !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: undefined !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: false, hasClose: true and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: undefined !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: false, hasClose: true and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: undefined !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: true, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: undefined !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.action {
  grid-column-start: 1;
  grid-row-start: 2;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  }
  .action {
    grid-column-start: 3;
    grid-row-start: 1;
    margin-left: 1rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: true, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: undefined !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.action {
  grid-column-start: 1;
  grid-row-start: 2;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  }
  .action {
    grid-column-start: 3;
    grid-row-start: 1;
    margin-left: 1rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: true, hasClose: true and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: undefined !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.action {
  grid-column-start: 1;
  grid-row-start: 2;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  }
  .action {
    grid-column-start: 3;
    grid-row-start: 1;
    margin-left: 1rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: neutral, hasAction: true, hasClose: true and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: undefined !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
.action {
  grid-column-start: 1;
  grid-row-start: 2;
}
.close {
  margin-left: 1rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%);
  }
  .action {
    grid-column-start: 3;
    grid-row-start: 1;
    margin-left: 1rem;
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: success, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #003320 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(59%) sepia(22%) saturate(1342%) hue-rotate(86deg) brightness(96%) contrast(88%);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: success, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #EBFAF0 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(62%) sepia(61%) saturate(551%) hue-rotate(86deg) brightness(86%) contrast(80%);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: warning, hasAction: false, hasClose: false and theme: dark 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #2B2208 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #FBFCFF;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(72%) sepia(94%) saturate(303%) hue-rotate(354deg) brightness(89%) contrast(94%);
  }
}
"
`;

exports[`getComponentCss() should return correct css for state: warning, hasAction: false, hasClose: false and theme: light 1`] = `
":host {
  display: grid !important;
  grid-template-columns: 1fr auto !important;
  grid-template-rows: auto !important;
  grid-row-gap: 1rem !important;
  align-items: start !important;
  justify-items: start !important;
  padding: 1rem !important;
  background: #FFF9E6 !important;
  border-radius: 4px !important;
}
h5 {
  font: normal normal 600 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
}
h5,p {
  margin: 0;
  color: #010205;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: 2rem 1fr auto auto !important;
  }
}

.icon {
  display: none;
}
.content {
  display: grid;
  grid-gap: 0.25rem;
  max-width: 50rem;
}
@media(min-width:760px) {
  .icon {
    display: inline-flex;
    color: black;
    filter: invert(74%) sepia(91%) saturate(343%) hue-rotate(348deg) brightness(92%) contrast(86%);
  }
}
"
`;

exports[`getNotificationContentJssStyle() should return correct JssStyle 1`] = `
{
  "display": "grid",
  "gridGap": "0.25rem",
  "maxWidth": "50rem",
}
`;

exports[`getNotificationIconJssStyle() should return correct JssStyle for state: error and theme: dark 1`] = `
{
  "@media(min-width:760px)": {
    "color": "black",
    "display": "inline-flex",
    "filter": "invert(28%) sepia(34%) saturate(3133%) hue-rotate(333deg) brightness(95%) contrast(100%)",
  },
  "display": "none",
}
`;

exports[`getNotificationIconJssStyle() should return correct JssStyle for state: error and theme: light 1`] = `
{
  "@media(min-width:760px)": {
    "color": "black",
    "display": "inline-flex",
    "filter": "invert(25%) sepia(62%) saturate(2003%) hue-rotate(335deg) brightness(100%) contrast(97%)",
  },
  "display": "none",
}
`;

exports[`getNotificationIconJssStyle() should return correct JssStyle for state: info and theme: dark 1`] = `
{
  "@media(min-width:760px)": {
    "color": "black",
    "display": "inline-flex",
    "filter": "invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%)",
  },
  "display": "none",
}
`;

exports[`getNotificationIconJssStyle() should return correct JssStyle for state: info and theme: light 1`] = `
{
  "@media(min-width:760px)": {
    "color": "black",
    "display": "inline-flex",
    "filter": "invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%)",
  },
  "display": "none",
}
`;

exports[`getNotificationIconJssStyle() should return correct JssStyle for state: neutral and theme: dark 1`] = `
{
  "@media(min-width:760px)": {
    "color": "black",
    "display": "inline-flex",
    "filter": "invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%)",
  },
  "display": "none",
}
`;

exports[`getNotificationIconJssStyle() should return correct JssStyle for state: neutral and theme: light 1`] = `
{
  "@media(min-width:760px)": {
    "color": "black",
    "display": "inline-flex",
    "filter": "invert(31%) sepia(32%) saturate(5493%) hue-rotate(216deg) brightness(90%) contrast(107%)",
  },
  "display": "none",
}
`;

exports[`getNotificationIconJssStyle() should return correct JssStyle for state: success and theme: dark 1`] = `
{
  "@media(min-width:760px)": {
    "color": "black",
    "display": "inline-flex",
    "filter": "invert(59%) sepia(22%) saturate(1342%) hue-rotate(86deg) brightness(96%) contrast(88%)",
  },
  "display": "none",
}
`;

exports[`getNotificationIconJssStyle() should return correct JssStyle for state: success and theme: light 1`] = `
{
  "@media(min-width:760px)": {
    "color": "black",
    "display": "inline-flex",
    "filter": "invert(62%) sepia(61%) saturate(551%) hue-rotate(86deg) brightness(86%) contrast(80%)",
  },
  "display": "none",
}
`;

exports[`getNotificationIconJssStyle() should return correct JssStyle for state: warning and theme: dark 1`] = `
{
  "@media(min-width:760px)": {
    "color": "black",
    "display": "inline-flex",
    "filter": "invert(72%) sepia(94%) saturate(303%) hue-rotate(354deg) brightness(89%) contrast(94%)",
  },
  "display": "none",
}
`;

exports[`getNotificationIconJssStyle() should return correct JssStyle for state: warning and theme: light 1`] = `
{
  "@media(min-width:760px)": {
    "color": "black",
    "display": "inline-flex",
    "filter": "invert(74%) sepia(91%) saturate(343%) hue-rotate(348deg) brightness(92%) contrast(86%)",
  },
  "display": "none",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: error and theme: dark 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": "#290A0A",
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: error and theme: light 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": "#FCE8E9",
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: dark 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": "#001A33",
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: info and theme: light 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": "#E8EEFD",
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: neutral and theme: dark 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": undefined,
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: neutral and theme: light 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": undefined,
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: success and theme: dark 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": "#003320",
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: success and theme: light 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": "#EBFAF0",
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: warning and theme: dark 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": "#2B2208",
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;

exports[`getNotificationRootJssStyles() should return correct JssStyle for state: warning and theme: light 1`] = `
{
  "@media(min-width:760px)": {
    "gridTemplateColumns": "2rem 1fr auto auto",
  },
  "alignItems": "start",
  "background": "#FFF9E6",
  "borderRadius": "4px",
  "display": "grid",
  "gridRowGap": "1rem",
  "gridTemplateColumns": "1fr auto",
  "gridTemplateRows": "auto",
  "justifyItems": "start",
  "padding": "1rem",
}
`;
